crates/aranya-policy-compiler/tests/data/type_errors/serialize_wrong_type_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: int
  |
2 |     seal { return serialize(3) }
  |                             ^ expected `struct Foo` but found `int`
